--- a/.github/workflows/Deploy to UAT.yml
+++ b/.github/workflows/Deploy to UAT.yml
@@ -79,18 +79,21 @@ jobs:
       with:
         creds: ${{ secrets.CONNECT_TO_DEV }}
   
-    - name: Deactivate All Triggers in DEV ADF
-      run: |
-        RESOURCE_GROUP="rg_ci_cd_new_dev"
-        DATA_FACTORY_NAME="df-new-dev"
-  
-        # Get all triggers in the data factory
-        triggers=$(az datafactory trigger list --resource-group $RESOURCE_GROUP --factory-name $DATA_FACTORY_NAME --query "[].name" -o tsv)
-  
-        # Deactivate each trigger
-        for trigger in $triggers
-        do
-          echo "Pausing trigger: $trigger"
-          az datafactory trigger stop --resource-group $RESOURCE_GROUP --factory-name $DATA_FACTORY_NAME --name $trigger
-        done
-      
+   
+
+
+  - name: Deactivate All Triggers in DEV ADF
+    run: |
+      RESOURCE_GROUP="rg_ci_cd_new_dev"
+      DATA_FACTORY_NAME="df-new-dev"
+
+      # Get all triggers in the data factory
+      triggers=$(az datafactory trigger list --resource-group $RESOURCE_GROUP --factory-name $DATA_FACTORY_NAME --query "[].name" -o tsv)
+
+      # Deactivate each trigger
+      for trigger in $triggers
+      do
+        echo "Pausing trigger: $trigger"
+        stop_output=$(az datafactory trigger stop --resource-group $RESOURCE_GROUP --factory-name $DATA_FACTORY_NAME --name $trigger 2>&1)
+        echo "Output of stop command for $trigger: $stop_output"
+      done
