--- a/.github/workflows/Deploy to UAT.yml
+++ b/.github/workflows/Deploy to UAT.yml
@@ -63,7 +63,7 @@ jobs:
 
 
 
-
+jobs:
   stop-adf-triggers:
     runs-on: ubuntu-latest
     steps:
@@ -95,6 +95,7 @@ jobs:
           }
         }
       shell: pwsh
+
 
 
 
