--- a/.github/workflows/Deploy to UAT.yml
+++ b/.github/workflows/Deploy to UAT.yml
@@ -63,38 +63,38 @@ jobs:
 
 
 
-jobs:
   stop-adf-triggers:
+    needs: deploy-uat
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Login to Azure using Service Principal JSON
-      uses: azure/login@v1
-      with:
-        creds: ${{ secrets.CONNECT_TO_DEV }}
+      - name: Login to Azure using Service Principal JSON
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.CONNECT_TO_DEV }}
 
-    - name: Install Azure PowerShell module
-      run: |
-        Install-Module -Name Az -Scope CurrentUser -Repository PSGallery -Force
-        Install-Module -Name Az.DataFactory -Scope CurrentUser -Repository PSGallery -Force
-      shell: pwsh
+      - name: Install Azure PowerShell module
+        run: |
+          Install-Module -Name Az -Scope CurrentUser -Repository PSGallery -Force
+          Install-Module -Name Az.DataFactory -Scope CurrentUser -Repository PSGallery -Force
+        shell: pwsh
 
-    - name: Stop all triggers in DEV ADF
-      run: |
-        $spn = '${{ secrets.CONNECT_TO_DEV }}' | ConvertFrom-Json
-        $password = ConvertTo-SecureString -String $spn.clientSecret -AsPlainText -Force
-        $pscredential = New-Object System.Management.Automation.PSCredential($spn.clientId, $password)
-        Connect-AzAccount -ServicePrincipal -Credential $pscredential -Tenant $spn.tenantId
+      - name: Stop all triggers in DEV ADF
+        run: |
+          $spn = '${{ secrets.CONNECT_TO_DEV }}' | ConvertFrom-Json
+          $password = ConvertTo-SecureString -String $spn.clientSecret -AsPlainText -Force
+          $pscredential = New-Object System.Management.Automation.PSCredential($spn.clientId, $password)
+          Connect-AzAccount -ServicePrincipal -Credential $pscredential -Tenant $spn.tenantId
 
-        $triggers = Get-AzDataFactoryV2Trigger -ResourceGroupName "rg_ci_cd_new_dev" -DataFactoryName "df-new-dev" -ErrorAction SilentlyContinue    
-        if ($triggers) {
-          foreach ($trigger in $triggers) {
-            Stop-AzDataFactoryV2Trigger -ResourceGroupName "rg_ci_cd_new_dev" -DataFactoryName "df-new-dev" -Name $trigger.TriggerName -Force
+          $triggers = Get-AzDataFactoryV2Trigger -ResourceGroupName "rg_ci_cd_new_dev" -DataFactoryName "df-new-dev" -ErrorAction SilentlyContinue    
+          if ($triggers) {
+            foreach ($trigger in $triggers) {
+              Stop-AzDataFactoryV2Trigger -ResourceGroupName "rg_ci_cd_new_dev" -DataFactoryName "df-new-dev" -Name $trigger.TriggerName -Force
+            }
           }
-        }
-      shell: pwsh
+        shell: pwsh
 
 
 
