--- a/.github/workflows/Deploy to UAT.yml
+++ b/.github/workflows/Deploy to UAT.yml
@@ -54,28 +54,42 @@ jobs:
           armTemplateParametersFile: ARMTemplateParametersForFactory.json
           additionalParameters: factoryName=df-new-uat ls_db_dev_properties_typeProperties_connectionString_secretName=secret-db-uat ls_kv_dev_properties_typeProperties_baseUrl=https://kv-l-uat.vault.azure.net/ ls_sas_storage_dev_properties_typeProperties_sasUri_secretName=secret-sas-storage-uat
 
+
+
   stop-adf-triggers:
-    needs: deploy-uat
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: azure/login@v1
-        with:
-          creds: ${{ secrets.CONNECT_TO_DEV }}
-      - run: |
-          Install-Module -Name Az -Scope CurrentUser -Repository PSGallery -Force
-          Install-Module -Name Az.DataFactory -Scope CurrentUser -Repository PSGallery -Force
-        shell: pwsh
-      - run: |
-          $spn = '${{ secrets.CONNECT_TO_DEV }}' | ConvertFrom-Json
-          $password = ConvertTo-SecureString -String $spn.clientSecret -AsPlainText -Force
-          $pscredential = New-Object System.Management.Automation.PSCredential($spn.clientId, $password)
-          Connect-AzAccount -ServicePrincipal -Credential $pscredential -Tenant $spn.tenantId
-          Set-AzContext -SubscriptionId $spn.subscriptionId
-          $triggers = Get-AzDataFactoryV2Trigger -ResourceGroupName "rg_ci_cd_new_dev" -DataFactoryName "df-new-dev" -ErrorAction SilentlyContinue    
-          if ($triggers) {
-            foreach ($trigger in $triggers) {
-              Stop-AzDataFactoryV2Trigger -ResourceGroupName "rg_ci_cd_new_dev" -DataFactoryName "df-new-dev" -Name $trigger.TriggerName -Force
-            }
+  needs: deploy-uat
+  runs-on: ubuntu-latest
+  steps:
+    - uses: actions/checkout@v2
+
+    - name: Login to Azure using Service Principal JSON
+      uses: azure/login@v1
+      with:
+        creds: ${{ secrets.CONNECT_TO_DEV }}
+
+    - name: Install Azure PowerShell module
+      run: |
+        Install-Module -Name Az -Scope CurrentUser -Repository PSGallery -Force
+        Install-Module -Name Az.DataFactory -Scope CurrentUser -Repository PSGallery -Force
+      shell: pwsh
+
+    - name: Stop all triggers in DEV ADF
+      run: |
+        $spn = '${{ secrets.CONNECT_TO_DEV }}' | ConvertFrom-Json
+        $password = ConvertTo-SecureString -String $spn.clientSecret -AsPlainText -Force
+        $pscredential = New-Object System.Management.Automation.PSCredential($spn.clientId, $password)
+        Connect-AzAccount -ServicePrincipal -Credential $pscredential -Tenant $spn.tenantId
+
+        # Explicitly set the subscription context
+        Set-AzContext -SubscriptionId $spn.subscriptionId
+
+        try {
+          $triggers = Get-AzDataFactoryV2Trigger -ResourceGroupName "rg_ci_cd_new_dev" -DataFactoryName "df-new-dev" -ErrorAction Stop
+          foreach ($trigger in $triggers) {
+            Stop-AzDataFactoryV2Trigger -ResourceGroupName "rg_ci_cd_new_dev" -DataFactoryName "df-new-dev" -Name $trigger.Name -Force
           }
-        shell: pwsh
+        } catch {
+          Write-Host "Error stopping triggers: $_"
+        }
+      shell: pwsh
+
