Update Deploy to UAT.yml

--- a/.github/workflows/Deploy to UAT.yml
+++ b/.github/workflows/Deploy to UAT.yml
@@ -59,46 +59,32 @@ jobs:
 
 
 
-  stop-adf-triggers:
-    needs: deploy-uat
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-  
-      - name: Login to Azure using Service Principal JSON
-        uses: azure/login@v1
-        with:
-          creds: ${{ secrets.CONNECT_TO_DEV }}
-  
-      - name: Install Azure PowerShell module
-        run: |
-          Install-Module -Name Az -Scope CurrentUser -Repository PSGallery -Force
-          Install-Module -Name Az.DataFactory -Scope CurrentUser -Repository PSGallery -Force
-        shell: pwsh
-  
-      - name: Stop all triggers in DEV ADF
-        run: |
+      - name: 'Stop ADF triggers in DEV environment'
+      uses: azure/powershell@v1
+      with:
+        inlineScript: |
+          # Setting Resource Group and Data Factory names
+          $ResourceGroupName = "rg_ci_cd_new_dev" 
+          $DataFactoryName = "df-new-dev"
+          
+          # Connect to Azure using the service principal from GitHub secret
           $spn = '${{ secrets.CONNECT_TO_DEV }}' | ConvertFrom-Json
           $password = ConvertTo-SecureString -String $spn.clientSecret -AsPlainText -Force
-          $pscredential = New-Object System.Management.Automation.PSCredential($spn.clientId, $password)
-          Connect-AzAccount -ServicePrincipal -Credential $pscredential -Tenant $spn.tenantId
-  
-          # Explicitly set the subscription context
+          $pscredential = New-Object System.Management.Automation.PSCredential ($spn.clientId, $password)
+          Connect-AzAccount -ServicePrincipal -Credential $pscredential -TenantId $spn.tenantId
           Set-AzContext -SubscriptionId $spn.subscriptionId
-  
-          try {
-            Write-Host "Retrieving triggers..."
-            $triggers = Get-AzDataFactoryV2Trigger -ResourceGroupName "rg_ci_cd_new_dev" -DataFactoryName "df-new-dev" -ErrorAction Stop
-            Write-Host "Found $($triggers.Count) triggers"
-  
-            foreach ($trigger in $triggers) {
-              Write-Host "Stopping trigger: $($trigger.Name)"
-              Stop-AzDataFactoryV2Trigger -ResourceGroupName "rg_ci_cd_new_dev" -DataFactoryName "df-new-dev" -Name $trigger.Name -Force
+    
+          # Retrieving and stopping triggers
+          $Triggers = Get-AzDataFactoryV2Trigger -ResourceGroupName $ResourceGroupName -DataFactoryName $DataFactoryName
+          foreach ($trigger in $Triggers) {
+            if($trigger.Properties.RuntimeState -eq "Started") {
+              Stop-AzDataFactoryV2Trigger -ResourceGroupName $ResourceGroupName -DataFactoryName $DataFactoryName -Name $trigger.Name -Force
+              Write-Host "Stopped trigger $($trigger.Name)."
+            } else {
+              Write-Host "Trigger $($trigger.Name) is already in a stopped state."
             }
-          } catch {
-            Write-Host "Error stopping triggers: $_"
           }
-        shell: pwsh
-
-
-
+    
+          Write-Host "All triggers in the DEV environment have been processed for stopping."
+        azPSVersion: 'LatestVersion'
+      if: success()
