--- a/.github/workflows/Deploy to UAT.yml
+++ b/.github/workflows/Deploy to UAT.yml
@@ -65,27 +65,29 @@ jobs:
         uses: azure/powershell@v1
         with:
           inlineScript: |
-            # Setting Resource Group and Data Factory names
-            $ResourceGroupName = "rg_ci_cd_new_dev" 
-            $DataFactoryName = "df-new-dev"
-            
             # Connect to Azure using the service principal from GitHub secret
             $spn = '${{ secrets.CONNECT_TO_DEV }}' | ConvertFrom-Json
             $password = ConvertTo-SecureString -String $spn.clientSecret -AsPlainText -Force
             $pscredential = New-Object System.Management.Automation.PSCredential ($spn.clientId, $password)
             Connect-AzAccount -ServicePrincipal -Credential $pscredential -TenantId $spn.tenantId
             Set-AzContext -SubscriptionId $spn.subscriptionId
-      
-            # Retrieving and stopping triggers
+
+            # Setting Resource Group and Data Factory names
+            $ResourceGroupName = "rg_ci_cd_new_dev" 
+            $DataFactoryName = "df-new-dev"
+
+            # Retrieving and logging the status of triggers
             $Triggers = Get-AzDataFactoryV2Trigger -ResourceGroupName $ResourceGroupName -DataFactoryName $DataFactoryName
+            Write-Host "Number of triggers found: $($Triggers.Count)"
+
             foreach ($trigger in $Triggers) {
-              if($trigger.Properties.RuntimeState -eq "Started") {
-                Stop-AzDataFactoryV2Trigger -ResourceGroupName $ResourceGroupName -DataFactoryName $DataFactoryName -Name $trigger.Name -Force
-                Write-Host "Stopped trigger $($trigger.Name)."
-              }
+                Write-Host "Trigger Name: $($trigger.Name), State: $($trigger.Properties.RuntimeState)"
+                if($trigger.Properties.RuntimeState -eq "Started") {
+                    Stop-AzDataFactoryV2Trigger -ResourceGroupName $ResourceGroupName -DataFactoryName $DataFactoryName -Name $trigger.Name -Force
+                    Write-Host "Stopped trigger $($trigger.Name)."
+                }
             }
           azPSVersion: 'LatestVersion'
           errorActionPreference: Stop
           failOnStandardError: false
           githubToken: ${{ secrets.CONNECT_TO_DEV }}
-
